resources/stylesheets/content/content.less
#contentSub .subpages {
	display: none;
}
#content #bodyContent {
	margin-top: 1.5rem;
	font-family: @font-family-primary;
}
p {
	font-size: 0.9375rem;
	font-weight: @font-weight-regular;
	line-height: 1.375rem;
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}
pre {
	font-size: 0.9375rem;
	margin: 2em 0;
}
.mw-content-ltr ul,
.mw-content-ltr ol {
	margin: 0 0 0 2em;
	padding: 0;

	& ul,
	& ol {
		margin: 0 0 0 1.5em;
	}

	& > li {
		margin-left: 0em;
		font-size: 0.9375rem;
		font-weight: @font-weight-regular;
		margin-top: 0.1875rem;
		margin-bottom: 0.1875rem;
		list-style-type: none;

		&:not( .ve-ce-branchNode ):before {
			content: '\2022 ';
			margin-left: -1em;
			margin-right: .65em;
		}
	}

	& > li.ve-ce-branchNode > p {
		&:before {
			content: '\2022 ';
			margin-left: -1em;
			margin-right: .65em;
		}
	}
}
.mw-content-ltr .floatleft + ul,
.mw-content-ltr .floatleft + ol {
	display: inline-block;
}
a,
a:link {
	.mixin-link-title-color(
			@link-color,
			@link-color-hover,
			@link-color-new,
			@link-color-new-hover
		);
}
.external {
	background-position: center right;
	background-repeat: no-repeat;
	background-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20height%3D%2212%22%3E%3Cpath%20fill%3D%22%23fff%22%20stroke%3D%22%2336c%22%20d%3D%22M1.5%204.518h5.982V10.5H1.5z%22%2F%3E%3Cpath%20fill%3D%22%2336c%22%20d%3D%22M5.765%201H11v5.39L9.427%207.937l-1.31-1.31L5.393%209.35l-2.69-2.688%202.81-2.808L4.2%202.544z%22%2F%3E%3Cpath%20fill%3D%22%23fff%22%20d%3D%22M9.995%202.004l.022%204.885L8.2%205.07%205.32%207.95%204.09%206.723l2.882-2.88-1.85-1.852z%22%2F%3E%3C%2Fsvg%3E');
	padding-right: 0.8125rem;
}

/* Now displayed by "VersionPager" */
#contentSub .mw-revision {
	display: none;
}

